MPS-33174 inner parameterized classes
with tests for various Outer.Inner scenarios (with and without intermediate parameters)